src/core-crm/objects/Course_Connection_Assessment__c/Course_Connection_Assessment__c.object-meta.xml
<CustomObject>
    <description>Contains the relationship between an assessment and course connection.</description>
    <label>Course Connection Assessment</label>
    <nameField>
        <displayFormat>CCA-{000000}</displayFormat>
        <label>Course Connection Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Connection Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>