src/core-crm/objects/Course_Connection_Assessment__c/fields/Assessment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Grade__c</fullName>
    <description>The grade achieved for the submitted assessment</description>
    <label>Assessment Grade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>