src/core-crm/objects/Course_Connection_Assessment__c/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related assessment</description>
    <label>Assessment Name</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Course Connection Assessments</relationshipLabel>
    <relationshipName>Course_Connection_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>