src/core-crm/objects/Course_Connection_Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to Contact populated by integration.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Connection Assessments</relationshipLabel>
    <relationshipName>Course_Connection_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>