src/core-crm/objects/Course_Connection_Assessment__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unit enrollment the assessment is associated to</description>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course Connection Assessments</relationshipLabel>
    <relationshipName>Course_Connection_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>