src/core-crm/objects/Course_Connection_Assessment__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>The date the assessment was submitted</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>