src/core-crm/objects/Course_Connection_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Name__c</columns>
    <columns>Course_Connection__c</columns>
    <columns>Assessment_Grade__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>Student_Success_Outreach_Manager</group>
        <group>Student_Success_Outreach_Staff</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>